Fix layout issue in skills-experience section; change height to width for better alignment

--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ section {
 
 .skills-experience div {
     display: flex;
-    height: 100%;
+    width:  100%;
     flex-direction: column;
     justify-content: space-evenly;
     opacity: 0.8;
